syntax = "proto3";

option go_package = "./;userpb";

message CreateUserRequest {
    string email = 1;
    string password = 2;
    uint32 age = 3;
    string additional_information = 4;
}

message CreateUserResponse {
    string id = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
}